--- a/index.html
+++ b/index.html
@@ -13,28 +13,52 @@
             <ul>
                 <li>
                     <!--navigation links-->
-                    <a href="https://linkedin.com/in/danika-pearson">LinkedIn</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="https://github.com/karmadog72/portfolio-challenge-">GitHub-Portfolio</a>
+                    <a href="https://linkedin.com/in/danika-pearson">My LinkedIn</a>
                 </li>
                 <li>
-                    <a href="https://github.com/karmadog72/run-buddy">GitHub-Repos</a>
+                    <a href="https://github.com/karmadog72">Repository</a>
                 </li>
                 <li>
-                    <a href="#get-in-touch">Get in Touch</a>
+                    <a href="#get-in-touch">Get In Touch</a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <!--hero background-->
+    <Section class="hero">
+        <div>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora necessitatibus deserunt, laudantium
+                doloremque voluptates quisquam, error quam iste tenetur officiis eveniet libero quibusdam id repudiandae
+                dolore excepturi veniam iure nemo?
+            </p>
+        </div>
+    </Section>
+
+    <!--footer section-->
+    <footer class="footer">
+        <div>
+            <h2 class="primary-border">Get In Touch</h2>
+            <ul>
+                <li style="list-style-type: none;">
+                    <h3>Danika Pearson</h3>
+                </li>
+                <li style="list-style-type: none;">
+                    <h3>(801)-123-4567</h3>
+                </li>
+                <li style="list-style-type: none;">
+                    <h3>fauxemail@gmail.com</h3>
+                </li>
+            </ul>
+
+        </div>
+
+    </footer>
+
 </body>
-<!--hero background-->
-<Section class="hero">
-    <div>
-        <h2>RANDOM STUFF ABOUT ME</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora necessitatibus deserunt, laudantium
-            doloremque voluptates quisquam, error quam iste tenetur officiis eveniet libero quibusdam id repudiandae
-            dolore excepturi veniam iure nemo?
-        </p>
-    </div>
-</Section>
+
+</html>
