added profile pic and border box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>Danika Pearson</h1>
+
         <!--navigation buttons-->
         <nav>
             <ul>
@@ -26,18 +27,26 @@
                 </li>
             </ul>
         </nav>
+        <div class="fun-title">
+            Coding Boot Camp
+        </div>
     </header>
 
     <!--hero background-->
-    <Section class="hero">
-        <div>
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora necessitatibus deserunt, laudantium
-                doloremque voluptates quisquam, error quam iste tenetur officiis eveniet libero quibusdam id repudiandae
-                dolore excepturi veniam iure nemo?
+    <main class="about">
+        <article id="Danika-Pearson-img" class="main">
+            <img src="./assets/images/Danika 2021-img.jpg" class="float-left" />
+            <h2>About Me:</h2>
+            <p>
+                Hi, I'm Danika Pearson! <br />I'm a student at the University Of Utah. I'm currently enrolled in their
+                "Coding
+                Boot
+                Camp" class.
+                <br />I have
+                a diverse employment background, from Aerospace to Administrative work. Thanks for stopping by!
             </p>
-        </div>
-    </Section>
+        </article>
+    </main>
 
     <!--footer section-->
     <footer class="footer">
