fixed flexbox and removed footer, not working

--- a/index.html
+++ b/index.html
@@ -33,23 +33,28 @@
     </header>
 
     <!--hero background-->
-    <main class="about">
-        <article id="Danika-Pearson-img" class="main">
+    <main class="content">
+        <section class="float-left">
+            <h2>About Me</h2>
+        </section>
+        <article id="about-me" class="main-area">
             <img src="./assets/images/Danika 2021-img.jpg" class="float-left" />
-            <h2>About Me:</h2>
+
             <p>
                 Hi, I'm Danika Pearson! <br />I'm a student at the University Of Utah. I'm currently enrolled in their
                 "Coding
                 Boot
                 Camp" class.
                 <br />I have
-                a diverse employment background, from Aerospace to Administrative work. Thanks for stopping by!
+                a diverse employment background, from Aerospace to Administrative work.
+                <br /> Thanks for stopping by!
             </p>
         </article>
+
     </main>
 
     <!--footer section-->
-    <footer class="footer">
+    <footer>
         <div>
             <h2 class="primary-border">Get In Touch</h2>
             <ul>
