changed header image and added my work section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
 <body>
     <header>
-        <h1>Danika Pearson</h1>
+        <div>
+            <img src="./assets/images/Danika 2021-img.jpg" class="float-left" />
+            <h1>Danika Pearson
+                <br />
+                Coding Boot Camp
+            </h1>
+
+        </div>
 
         <!--navigation buttons-->
         <nav>
@@ -27,45 +34,52 @@
                 </li>
             </ul>
         </nav>
-        <div class="fun-title">
-            Coding Boot Camp
-        </div>
+
     </header>
 
     <!--hero background-->
     <main class="content">
-        <section class="float-left">
-            <h2>About Me</h2>
-        </section>
         <article id="about-me" class="main-area">
-            <img src="./assets/images/Danika 2021-img.jpg" class="float-left" />
-
-            <p>
-                Hi, I'm Danika Pearson! <br />I'm a student at the University Of Utah. I'm currently enrolled in their
-                "Coding
-                Boot
-                Camp" class.
-                <br />I have
-                a diverse employment background, from Aerospace to Administrative work.
-                <br /> Thanks for stopping by!
-            </p>
+            <div>
+                <h2 class="float-left">About Me</h2>
+            </div>
+            <div>
+                <p>
+                    Hi, I'm Danika Pearson! <br />I'm a student at the University Of Utah. I'm currently enrolled in
+                    their
+                    "Coding
+                    Boot
+                    Camp" class.
+                    <br />I have
+                    a diverse employment background, from Aerospace to Administrative work.
+                    <br /> Thanks for stopping by!
+                </p>
+            </div>
         </article>
-
     </main>
-
-    <!--footer section-->
-    <footer>
+    <article>
         <div>
-            <h2 class="primary-border">Get In Touch</h2>
+            <h2 class="float-right">About Me</h2>
+        </div>
+        <div>
+            <p>
+                My Work
+            </p>
+        </div>
+    </article>
+    <!--footer section-->
+    <footer id="get-in-touch" class="footer">
+        <div>
+            <h2>Get In Touch</h2>
             <ul>
                 <li style="list-style-type: none;">
                     <h3>Danika Pearson</h3>
                 </li>
                 <li style="list-style-type: none;">
-                    <h3>(801)-123-4567</h3>
+                    <a href="801)123-4567">(801)123-4567</a>
                 </li>
                 <li style="list-style-type: none;">
-                    <h3>fauxemail@gmail.com</h3>
+                    <a href="fauxemail@gmail.com">fauxemail@gmail.com</a>
                 </li>
             </ul>
 
