added flex cards

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/in/danika-pearson">My LinkedIn</a>
+                    <a href="#my-work">My Work</a>
                 </li>
                 <li>
-                    <a href="https://github.com/karmadog72">Repository</a>
+                    <a href="#resume">My Resume</a>
                 </li>
                 <li>
                     <a href="#get-in-touch">Get In Touch</a>
@@ -43,30 +43,51 @@
             <div>
                 <h2 class="float-left">About Me</h2>
             </div>
+
             <div>
                 <p>
-                    Hi, I'm Danika Pearson! <br />I'm a student at the University Of Utah. I'm currently enrolled in
-                    their
-                    "Coding
-                    Boot
-                    Camp" class.
-                    <br />I have
-                    a diverse employment background, from Aerospace to Administrative work.
-                    <br /> Thanks for stopping by!
+                    Hi, I'm Danika Pearson! <br />I'm currently attending the University Of Utah
+                    and I'm enrolled in their "Coding Boot Camp" for Web Development.
+
                 </p>
             </div>
         </article>
     </main>
-    <article>
-        <div>
-            <h2 class="float-right">About Me</h2>
-        </div>
-        <div>
+    <!--my work section"-->
+    <div id="my-work" class="work-links">
+        <section class="cards">
+            <h2>My Work</h2>
             <p>
-                My Work
+                I have a diverse employment background, from Aerospace to Administrative Assistant and everything in
+                between.<br />
+                Check out my LinkedIn and GitHub Repositories for more of my work!
             </p>
-        </div>
-    </article>
+        </section>
+        <section class="cards">
+            <h2>LinkedIn</h2>
+
+            <img src="./assets/images/linkedin_social_icon.png" alt="LinkedIn icon" />
+            <p>
+                lorem
+            </p>
+        </section>
+        <section class="cards">
+            <h2>GitHub</h2>
+
+            <img src="./assets/images/GitHub-Mark-120px-plus.png" alt="github icon" />
+            <p>
+                lorem
+            </p>
+        </section>
+        <section id="resume" class="cards">
+            <h2>Resume </h2>
+
+            <img src="./assets/images/resume.png" alt="resume icon" />
+            <p>
+                lorem
+            </p>
+        </section>
+    </div>
     <!--footer section-->
     <footer id="get-in-touch" class="footer">
         <div>
@@ -76,10 +97,10 @@
                     <h3>Danika Pearson</h3>
                 </li>
                 <li style="list-style-type: none;">
-                    <a href="801)123-4567">(801)123-4567</a>
+                    <a href="(801)518-6834">(801)518-6834</a>
                 </li>
                 <li style="list-style-type: none;">
-                    <a href="fauxemail@gmail.com">fauxemail@gmail.com</a>
+                    <a href="danika.m.pearson@gmail.com">danika.m.pearson@gmail.com</a>
                 </li>
             </ul>
 
