--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     content="width=device-width, initial-scale=1.0" />
 <Title>Danika Pearson Portfolio</Title>
 </head>
+<main class="content">
+    <article id="about-me" class="main-area">
+        <div>
+            <h2 class="float-left">About Me</h2>
+        </div>
+
+        <div>
+            <p>
+                Hi, I'm Danika Pearson! <br />I'm currently attending the University Of Utah
+                and I'm enrolled in their "Coding Boot Camp" for Web Development.
+
+            </p>
+        </div>
+    </article>
+</main>
 
 <body>
     <header>
@@ -38,53 +53,48 @@
     </header>
 
     <!--hero background-->
-    <main class="content">
-        <article id="about-me" class="main-area">
-            <div>
-                <h2 class="float-left">About Me</h2>
-            </div>
 
-            <div>
-                <p>
-                    Hi, I'm Danika Pearson! <br />I'm currently attending the University Of Utah
-                    and I'm enrolled in their "Coding Boot Camp" for Web Development.
-
-                </p>
-            </div>
-        </article>
-    </main>
     <!--my work section"-->
     <div id="my-work" class="work-links">
         <section class="cards">
             <h2>My Work</h2>
             <p>
                 I have a diverse employment background, from Aerospace to Administrative Assistant and everything in
-                between.<br />
-                Check out my LinkedIn and GitHub Repositories for more of my work!
+                between.<br /><br />
+                Check out my LinkedIn and GitHub Repositories for more of my work!➪ <br />
+                👩‍💻
             </p>
         </section>
         <section class="cards">
             <h2>LinkedIn</h2>
-
-            <img src="./assets/images/linkedin_social_icon.png" alt="LinkedIn icon" />
+            <br>
+            <a href="https://linkedin.com/in/danika-pearson">
+                <img alt="linkedIn icon" src="assets/images/linkedin_social_icon.png" width=150" height="70">
+            </a>
             <p>
-                lorem
+                Thanks for visiting<br />👋
             </p>
         </section>
         <section class="cards">
             <h2>GitHub</h2>
-
-            <img src="./assets/images/GitHub-Mark-120px-plus.png" alt="github icon" />
+            <br>
+            <a href="https://github.com/karmadog72">
+                <img alt="GitHub icon" src="./assets/images/GitHub-Mark-120px-plus.png" width=150" height="70">
+            </a>
             <p>
-                lorem
+                All the code!<br /> 💻
             </p>
         </section>
         <section id="resume" class="cards">
             <h2>Resume </h2>
+            <!--sorry the resume link is a bit advanced for me, link does not work-->
 
-            <img src="./assets/images/resume.png" alt="resume icon" />
+            <a>
+                <img src="./assets/images/resume.png" alt="resume icon" />
+            </a>
+
             <p>
-                lorem
+                Boring but important stuff <br />📋
             </p>
         </section>
     </div>
