--- a/index.html
+++ b/index.html
@@ -34,16 +34,11 @@
         <!--navigation buttons-->
         <nav>
             <ul>
-                <li>
-                    <!--navigation links-->
-                    <a href="#about-me">About Me</a>
-                </li>
+
                 <li>
                     <a href="#my-work">My Work</a>
                 </li>
-                <li>
-                    <a href="#resume">My Resume</a>
-                </li>
+
                 <li>
                     <a href="#get-in-touch">Get In Touch</a>
                 </li>
@@ -60,9 +55,15 @@
             <h2>My Work</h2>
             <p>
                 I have a diverse employment background, from Aerospace to Administrative Assistant and everything in
-                between.<br /><br />
+                between.<br /><br />👩‍💻
                 Check out my LinkedIn and GitHub Repositories for more of my work!➪ <br />
-                👩‍💻
+
+                <br />
+
+                STRESS REDUCER 🢛
+                <a href="https://twitter.com/cutedogs101">
+                    <img alt="easter egg icon" src="assets/images/easter egg.png" width=5" height="5">
+                </a>
             </p>
         </section>
         <section class="cards">
