added AL-Together, group project URL to Portfolio

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 STRESS REDUCER 🢛
                 <a href="https://twitter.com/cutedogs101">
-                    <img alt="easter egg icon" src="assets/images/easter egg.png" width=5" height="5">
+                    <img alt="easter egg icon" src="assets/images/easter egg.png">
                 </a>
             </p>
         </section>
@@ -70,7 +70,7 @@
             <h2>LinkedIn</h2>
             <br>
             <a href="https://linkedin.com/in/danika-pearson">
-                <img alt="linkedIn icon" src="assets/images/linkedin_social_icon.png" width=150" height="70">
+                <img alt="linkedIn icon" src="assets/images/linkedin_social_icon.png" width="150" height="70">
             </a>
             <p>
                 Thanks for visiting<br />👋
@@ -88,14 +88,12 @@
         </section>
         <section id="resume" class="cards">
             <h2>Resume </h2>
-            <!--sorry the resume link is a bit advanced for me, link does not work-->
-
-            <a>
-                <img src="./assets/images/resume.png" alt="resume icon" />
-            </a>
+            <img src="./assets/images/forget.png" alt="forget icon" />
 
             <p>
-                Boring but important stuff <br />📋
+                <a href="https://lannylopez.github.io/AL-together/">AL-TOGETHER PROJECT</a><br /><br />A site for
+                people with Alzheimer's or memory troubles.
+
             </p>
         </section>
     </div>
@@ -113,6 +111,7 @@
                 <li style="list-style-type: none;">
                     <a href="danika.m.pearson@gmail.com">danika.m.pearson@gmail.com</a>
                 </li>
+                <li><a href="https://lannylopez.github.io/AL-together/">AL-TOGETHER</a></li>
             </ul>
 
         </div>
