added project 2 link and fixed cards

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     content="width=device-width, initial-scale=1.0" />
 <Title>Danika Pearson Portfolio</Title>
 </head>
-<main class="content">
-    <article id="about-me" class="main-area">
+<!-- <main class="content"> -->
+<!-- <article id="about-me" class="main-area">
         <div>
             <h2 class="float-left">About Me</h2>
         </div>
@@ -17,20 +17,35 @@
 
             </p>
         </div>
-    </article>
+    </article> -->
 </main>
 
 <body>
     <header>
+
         <div>
             <img src="./assets/images/Danika 2021-img.jpg" class="float-left" />
             <h1>Danika Pearson
                 <br />
-                Coding Boot Camp
+                Jr. Web Developer
             </h1>
 
         </div>
+        <main class="content">
+            <article id="about-me" class="main-area">
+                <!-- <div>
+                    <h2 class="float-left">About Me</h2>
+                </div> -->
 
+                <div>
+                    <p>
+                        HI, I'M DANIKA PEARSON! <br />I'M CURRENTLY ATTENDING THE UNIVERSITY OF UTAH
+                        AND I'M ENROLLED IN THEIR "CODING BOOT CAMP" FOR WEB DEVELOPMENT.
+
+                    </p>
+                </div>
+            </article>
+        </main>
         <!--navigation buttons-->
         <nav>
             <ul>
@@ -51,12 +66,12 @@
 
     <!--my work section"-->
     <div id="my-work" class="work-links">
-        <section class="cards">
+        <!-- <section class="cards">
             <h2>My Work</h2>
             <p>
                 I have a diverse employment background, from Aerospace to Administrative Assistant and everything in
                 between.<br /><br />👩‍💻
-                Check out my LinkedIn and GitHub Repositories for more of my work!➪ <br />
+                and !➪ <br />
 
                 <br />
 
@@ -65,7 +80,7 @@
                     <img alt="easter egg icon" src="assets/images/easter egg.png">
                 </a>
             </p>
-        </section>
+        </section> -->
         <section class="cards">
             <h2>LinkedIn</h2>
             <br>
@@ -73,7 +88,7 @@
                 <img alt="linkedIn icon" src="assets/images/linkedin_social_icon.png" width="150" height="70">
             </a>
             <p>
-                Thanks for visiting<br />👋
+                Check-out my LinkedIn for more of my work
             </p>
         </section>
         <section class="cards">
@@ -83,16 +98,23 @@
                 <img alt="GitHub icon" src="./assets/images/GitHub-Mark-120px-plus.png" width=150" height="70">
             </a>
             <p>
-                All the code!<br /> 💻
+                Check-out my GitHub repository for more of my work
             </p>
         </section>
         <section id="resume" class="cards">
-            <h2>Resume </h2>
+            <h2>Projects </h2>
             <img src="./assets/images/forget.png" alt="forget icon" />
 
             <p>
                 <a href="https://lannylopez.github.io/AL-together/">AL-TOGETHER PROJECT</a><br /><br />A site for
                 people with Alzheimer's or memory troubles.
+
+            </p>
+            <br />
+            <p>
+                <a href="https://whispering-chamber-78611.herokuapp.com/">ALLERGY-FINDER</a><br /><br />A grocery
+                filtering site for
+                people with food allergies/ dietary restriction.
 
             </p>
         </section>
@@ -112,6 +134,7 @@
                     <a href="danika.m.pearson@gmail.com">danika.m.pearson@gmail.com</a>
                 </li>
                 <li><a href="https://lannylopez.github.io/AL-together/">AL-TOGETHER</a></li>
+                <li> <a href="https://whispering-chamber-78611.herokuapp.com/">ALLERGY-FINDER</a></li>
             </ul>
 
         </div>
